[package]
name = "es_loan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esrs = { version = "0.12", features = ["postgres"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls", "uuid", "json", "chrono"] }
serde = "1.0.164"
serde_json = "1.0.97"
uuid = "1.3.4"
async-trait = "0.1.68"
rouille = "3.6.2"
anyhow = "1.0.71"

